--- a/workEx.html
+++ b/workEx.html
@@ -42,6 +42,13 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
 </p>
 </li>
 </ul>
+ 
+<ul>
+<li><p><b><a href="#">ELNA Medical, Montreal, Canada (2022-present)</a></b><br />
+<b>Chief AI Officer</b>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><b><a href="#">IVADO Labs, Montreal, Canada (2020-present)</a></b><br />
