--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ cloud computing, online advertising, peer-to-peer lending, real estate, healthca
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <h2>Editorial Work</h2>
+<p>Guest Department Editor for <a href=""</a>POM Special Issue on Responsible Data Science</a> (2022-2023)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) 
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
 <p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-present)
