--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Bensadoun Faculty Scholar <br />
 Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https://www.gerad.ca/en"</a> GERAD </a> <br />
 <br />
-Chief AI Officier @<a href="https://elnamedical.com/en/"</a> ELNA Medical </a> <br />
+Chief AI Officer @<a href="https://elnamedical.com/en/"</a> ELNA Medical </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
