--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Browns Books</a>
 <h2>About</h2>
  <p class="p2"><span>
  I am the Scale AI Chair Professor of Retail and Operations Management and co-director of the <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a> at <a href="https://www.mcgill.ca/"</a> McGill University</a>. I am the Chief AI Officer of <a href="https://elnamedical.com/en/"</a> ELNA Medical </a> and the Scientific Director of the non-profit <a href="https://myopencourt.org/"</a> MyOpenCourt.org</a>.
- I am also a Scientific Advisor in AI and Data Science at <a href="https://ivadolabs.com/"</a> IVADO Labs </a> and I am actively advising corporations, retailers, and startups on topics related to <b>pricing, retail, and data science</b>.  
+ I am also a Scientific Advisor in AI and Data Science at <a href="https://ivadolabs.com/"</a> IVADO Labs </a>, and I am actively advising corporations, retailers, and startups on topics related to <b>pricing, retail, and data science</b>.  
  Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
