--- a/news.html
+++ b/news.html
@@ -31,7 +31,11 @@
 </div>
 <h3>In the News</h3>
 <ul>
-  
+ 
+<li><p><a href="https://ca.finance.yahoo.com/news/elna-medical-passes-tech-milestone-120000198.html">ELNA Medical Passes a New Tech Milestone with Appointment of First Chief AI Officer</a>, Yahoo Finance, February 2022</p>
+
+<li><p><a href="https://www.lelezard.com/communique-20249781.html">ELNA Médical passe un nouveau jalon technologique avec la nomination d'un premier chef de l'intelligence artificielle</a>, Le Lézard, February 2022</p>
+
 <li><p><a href="https://www.rethink.industries/top-retail-influencers-2022/">RETHINK Retail's Top Retail Influencers of 2022</a>, RETHINK Retail, January 2022</p>
  
 <li><p><a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-mess-heres-how-we-can-fix-it-11641396921">Opinion: IPO Disclosure is a Mess; Here’s a Simple Way to Fix it</a>, MarketWatch, January 2022</p>
