--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
 <h3>In the News</h3>
 <ul>
  
-<li><p><a href="https://ca.finance.yahoo.com/news/elna-medical-passes-tech-milestone-120000198.html">ELNA Medical Passes a New Tech Milestone with Appointment of First Chief AI Officer</a>, Yahoo Finance, February 2022</p>
+<li><p><a href="https://ca.finance.yahoo.com/news/elna-medical-passes-tech-milestone-120000198.html">ELNA Medical Passes a New Tech Milestone with Appointment of First Chief AI Officer</a>, Yahoo Finance, <a href="https://www.newswire.ca/news-releases/elna-medical-passes-a-new-tech-milestone-with-appointment-of-first-chief-ai-officer-879643270.html">Newswire</a>, <a href="https://diversitycan.com/web/Article.aspx?id=ELA-Medical-Aoits-Dr-Maxime-Cohe-as-Its-First-Chief-AI-Officer-3535">DiversityCan</a>, February 2022</p>
 
 <li><p><a href="https://www.lelezard.com/communique-20249781.html">ELNA Médical passe un nouveau jalon technologique avec la nomination d'un premier chef de l'intelligence artificielle</a>, Le Lézard, February 2022</p>
 
