--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Browns Books</a>
   
 <br /> <br />
 My core expertise lies at the intersection of <b>data science</b> and <b>operations management</b>. I have worked on retail, ride-sharing, airline, sustainability,
-cloud computing, online advertising, peer-to-peer lending, real estate, healthcare analytics, and conflict analytics. I have collaborated with many companies including Google, Waze, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Aldo Group, Couche-Tard/Circle K, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
+cloud computing, online advertising, peer-to-peer lending, real estate, healthcare analytics, and conflict analytics. I have collaborated with many companies including Google, Waze, Oracle Retail, IBM Research, Via, Spotify, Aldo Group, Couche-Tard/Circle K, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <h2>Editorial Work</h2>
