--- a/teaching.html
+++ b/teaching.html
@@ -41,6 +41,13 @@ AI & Data Analytics module for Advanced Management Course
 </ul>
   
 <ul>
+<li><p><b><a href="">Retail Executive Eduction, McGill University BSRM - 2022 </a></b><br />
+Excelling in the New World of Retail - Module on Data Analytics & Decision Making
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020-2022 </a></b><br />
 Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6, 4.8, 4.9  (out of 5)
 </p>
