--- a/research.html
+++ b/research.html
@@ -211,7 +211,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </ol>
 
 <ol start="16">
-<li><p><a href="https://maxccohen.github.io/Consumer-Surplus.pdf">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, <b>Production and Operations Management</b>, 2021 (published online) <br />
+<li><p><a href="https://maxccohen.github.io/Consumer-Surplus.pdf">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, <b>Production and Operations Management</b>, 31(2):478-494, 2022 <br />
 <a href="https://maxccohen.github.io/Consumer-Surplus-Appendix.pdf">Online Appendix</a> <br />
 </div>
 </p>
