--- a/news.html
+++ b/news.html
@@ -32,6 +32,8 @@
 <h3>In the News</h3>
 <ul>
  
+<li><p><a href="https://www.lesaffaires.com/secteurs-d-activite/general/nouvelles-recrues-maxime-cohen/631497">Nouvelles Recrues: Maxime Cohen</a>, Les affaires, March 2022</p>
+  
 <li><p><a href="https://elnamedical.com/en/appointment-of-first-chief-ai-officer/">ELNA Medical Passes a New Tech Milestone with Appointment of First Chief AI Officer</a>, <a href="https://finance.yahoo.com/news/elna-medical-passes-tech-milestone-120000198.html">Yahoo Finance</a>, <a href="https://www.newswire.ca/news-releases/elna-medical-passes-a-new-tech-milestone-with-appointment-of-first-chief-ai-officer-879643270.html">Newswire</a>, <a href="https://diversitycan.com/web/Article.aspx?id=ELA-Medical-Aoits-Dr-Maxime-Cohe-as-Its-First-Chief-AI-Officer-3535">DiversityCan</a>, <a href="https://www.benzinga.com/pressreleases/22/02/n25735975/elna-medical-passes-a-new-tech-milestone-with-appointment-of-first-chief-ai-officer">Benzinga</a>, <a href="https://www.biospace.com/article/releases/elna-medical-passes-a-new-tech-milestone-with-appointment-of-first-chief-ai-officer/">BioSpace</a>, February 2022</p>
 
 <li><p><a href="https://www.lelezard.com/communique-20249781.html">ELNA Médical passe un nouveau jalon technologique avec la nomination d'un premier chef de l'intelligence artificielle</a>, Le Lézard, February 2022</p>
