--- a/research.html
+++ b/research.html
@@ -371,15 +371,6 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Major Revision in <b>Production and Operations Management</b> <br />
-Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
-Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 </div>
 </p>
@@ -406,6 +397,15 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 <ul>
 <li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Submitted <br />
 </div>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Submitted <br />
+Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
+Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
+</div>
+</p>
 </li>
 </ul>
 
