--- a/research.html
+++ b/research.html
@@ -305,7 +305,7 @@ Media coverage: <a href="https://csunshinetoday.csun.edu/media-releases/csun-pro
 </ol>
 
 <ol start="27">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Provisionally accepted in <b>MIT Sloan Management Review</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Forthcoming in <b>MIT Sloan Management Review</b> <br />
 Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-mess-heres-how-we-can-fix-it-11641396921">MarketWatch</a> <br />
 </div>
 </p>
