--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Book Depository</a>,
 Browns Books</a>
 </p>
 
-<div id="wcb" class="carbonbadge"></div>
+<h1 ALIGN="left"> <div id="wcb" class="carbonbadge"></div></h1>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 
 </td>
