--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@ Book Depository</a>,
 Browns Books</a>
 </p>
 
-<h1 ALIGN="left"> <div id="wcb" class="carbonbadge"></div></h1>
-<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
-
 </td>
 <td>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
@@ -82,6 +79,9 @@ Browns Books</a>
 </td> -->
 
 </tr></table>
+
+<div id="wcb" class="carbonbadge"></div>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 
 <h2>About</h2>
  <p class="p2"><span>
