--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@ Book Depository</a>,
   <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/Demand-Prediction-in-Retail--A-Practical-Guide-to-Leverag/9783030858544">
 Browns Books</a>
 <br />
-<td align="left">
+<h1 ALIGN="left"> 
 <div id="wcb" class="carbonbadge"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+</h1>
 </p>
-</td>
+
 
 </td>
 <td>
