--- a/students.html
+++ b/students.html
@@ -46,7 +46,7 @@
     
 <li><p>Haotian Song (2022) - OM Ph.D. student at NYU (advisor: Wenqiang Xiao). First position: Assistant Professor of Operations Management at Zhejiang University, School of Management</p>
 
-<li><p>Xiao Lei - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub)</p>
+<li><p>Xiao Lei (2022) - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub). First position: Assistant Professor at University of Hong Kong, HKU Business School</p>
   
 <li><p>Zahra Jalali - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
   
