--- a/research.html
+++ b/research.html
@@ -387,6 +387,13 @@ Accepted at CIST 2021, 2021 North American Meeting of the Urban Economics Associ
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Major Revision in <b>Information Systems Research</b> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </div>
@@ -412,13 +419,6 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on the Residential Real Estate Market,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Submitted <br />
 </div>
 </p>
 </li>
