--- a/research.html
+++ b/research.html
@@ -259,7 +259,7 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </ol>
 
 <ol start="21">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Conditionally Accepted in <b>Information Systems Research</b> <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3345669">"Evolution of Referrals Over Customers' Life Cycle: Evidence from a Ride-Sharing Platform,"</a> with C. Fernandez and A. Ghose, Forthcoming in <b>Information Systems Research</b> <br /> 
 Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/new-research-nyu-stern-shows-how-marketers-can-boost-high-quality-customer-referrals-drive-growth">NYU Stern Research Highlights</a>, <a href="https://www.nyu.edu/about/news-publications/news/2019/may/new-stern-research-shows-how-marketers-can-boost-high-quality-cu.html">NYU News</a> <br />
 </div>
 </p>
