--- a/teaching.html
+++ b/teaching.html
@@ -33,9 +33,16 @@
 <h2>Teaching Experience</h2>
 
 <ul>
+<li><p><b><a href="">International Masters Program for Managers, McGill University - 2022 </a></b><br />
+Analytics and AI for Managers Course
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020-2022 </a></b><br />
 Marketing modules for Integrated Management Thinking and Executive Development Course<br />
-AI & Data Analytics module for Advanced Management Course
+Analytics & AI module for Advanced Management Course
 </p>
 </li>
 </ul>
