--- a/research.html
+++ b/research.html
@@ -432,15 +432,22 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, Submitted <font color="red"<b>(NEW Version)</b></font> <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, Submitted <br /> 
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Submitted <font color="red"<b>(NEW)</b></font> <br /> 
-Aaccepted to the Conference on Empirical Legal Studies <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Submitted  <br /> 
+Accepted to the Conference on Empirical Legal Studies <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <font color="red"<b>(NEW)</b></font> <br /> 
 </div>
 </p>
 </li>
