--- a/teaching.html
+++ b/teaching.html
@@ -56,7 +56,7 @@ Excelling in the New World of Retail - Module on Data Analytics & Decision Makin
   
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020-2022 </a></b><br />
-Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6, 4.8, 4.9  (out of 5)
+Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9 (out of 5)
 </p>
 </li>
 </ul>
@@ -70,7 +70,7 @@ Elective course for Master of Management in Analytics. Evaluations: 5, 5 (out of
 
 <ul>
 <li><p><b><a href="">Data-Driven Retail Decisions - McGill University - 2022 </a></b><br />
-Elective course for Master of Management in Retailing
+Elective course for Master of Management in Retailing. Evaluations: 4.9 (out of 5)
 </p>
 </li>
 </ul>
