--- a/teaching.html
+++ b/teaching.html
@@ -56,42 +56,42 @@ Excelling in the New World of Retail - Module on Data Analytics & Decision Makin
   
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020-2022 </a></b><br />
-Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9 (out of 5)
+Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9 (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Revenue Management - McGill University - 2020-2022 </a></b><br />
-Elective course for Master of Management in Analytics. Evaluations: 5, 5 (out of 5)
+Elective course for Master of Management in Analytics. Evals: 5, 5 (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Data-Driven Retail Decisions - McGill University - 2022 </a></b><br />
-Elective course for Master of Management in Retailing. Evaluations: 4.9 (out of 5)
+Elective course for Master of Management in Retailing. Evals: 4.9 (out of 5)
 </p>
 </li>
 </ul>
   
 <ul>
 <li><p><b><a href="">Service Analytics - McGill University - 2020 & 2021 </a></b><br />
-Elective course for Master of Management in Analytics. Evaluations: 4.7, 5 (out of 5)
+Elective course for Master of Management in Analytics. Evals: 4.7, 5 (out of 5)
 </p>
 </li>
 </ul>
   
 <ul>
 <li><p><b><a href="">Operations Management - NYU Stern - 2017-2019 </a></b><br />
-Undergraduate core course (2 sections of 70 students each year). Evaluations: 6.6, 6.7, 6.5, 6.7 (out of 7), 4.8, 4.8 (out of 5)
+Undergraduate core course (2 sections of 70 students each year). Evals: 6.6, 6.7, 6.5, 6.7 (out of 7), 4.8, 4.8 (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Operations in the Sharing Economy - NYU Stern - 2019 </a></b><br />
-Doctoral course on recent research trends in the context of the sharing economy. Evaluation: 5/5
+Doctoral course on recent research trends in the context of the sharing economy. Evals: 5/5
 </p>
 </li>
 </ul>
