--- a/research.html
+++ b/research.html
@@ -427,6 +427,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <br /> <!-- <font color="red"<b>(NEW)</b></font> <br /> -->
+Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensure-everyone-pays-fair-prices-online/">Delve</a> <br />
 </div>
 </p>
 </li>
