--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
  
 <li><p><a href="https://poetsandquants.com/best-profs/2022-best-40-under-40-mba-professors-maxime-cohen-mcgill-university-desautels-faculty-of-management/?pq-category=best-profs">2022 Best 40-Under-40 MBA Professors: Maxime Cohen, McGill University</a>, Poets&Quants, May 2022</p>  
   
-<li><p><a href="https://player.fm/series/leadership-perspectives/making-sense-of-data-with-tableau-episode-3-maxime-cohen-on-becoming-a-data-driven-innovative-organization">Making Sense of Data with Tableau – Maxime Cohen on Becoming a Data Driven, Innovative Organization</a>, Podcast by Conference Board of Canada and Tableau, May 2022</p>   
+<li><p><a href="https://player.fm/series/leadership-perspectives/making-sense-of-data-with-tableau-episode-3-maxime-cohen-on-becoming-a-data-driven-innovative-organization">Making Sense of Data with Tableau – Maxime Cohen on Becoming a Data Driven, Innovative Organization</a>, Podcast by Conference Board of Canada and Tableau, <a href="https://podcasts.apple.com/gb/podcast/making-sense-of-data-with-tableau-episode-3-maxime/id1510838077?i=1000563226401">Apple Podcasts</a>, <a href="https://open.spotify.com/episode/6cn0Jy4Bvr7C3RFQ8XLee1">Spotify</a>, May 2022</p>   
 
 <li><p><a href="https://www.lesaffaires.com/blogues/karl-moore/comment-les-detaillants-peuvent-tirer-parti-des-donnees-selon-maxime-cohen/633023">Comment les détaillants peuvent tirer parti des données selon Maxime Cohen</a> (in French), Les Affaires, May 2022</p>  
 
