--- a/research.html
+++ b/research.html
@@ -306,7 +306,8 @@ Media coverage: <a href="https://csunshinetoday.csun.edu/media-releases/csun-pro
 </ol>
 
 <ol start="27">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">"Initial Public Offerings: Dealing with the Disclosure Dilemma,"</a> with A. Damodaran and D. McCarthy, Forthcoming in <b>MIT Sloan Management Review</b> <br />
+<li><p><a href="https://sloanreview.mit.edu/article/ipo-disclosures-are-ripe-for-reform/">"IPO Disclosures Are Ripe for Reform,"</a> with A. Damodaran and D. McCarthy, <b>MIT Sloan Management Review</b>, 2022 <br />
+<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3936750">Longer Version - "Initial Public Offerings: Dealing with the Disclosure Dilemma"</a> <br />
 Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-mess-heres-how-we-can-fix-it-11641396921">MarketWatch</a> <br />
 </div>
 </p>
