--- a/research.html
+++ b/research.html
@@ -405,6 +405,13 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, Major Revision in <b>Transportation Research Part A</b> <br /> 
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Submitted <br />
 </div>
 </li>
@@ -430,13 +437,6 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <br /> <!-- <font color="red"<b>(NEW)</b></font> <br /> -->
 Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensure-everyone-pays-fair-prices-online/">Delve</a> <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, Submitted <br /> 
 </div>
 </p>
 </li>
