--- a/grants.html
+++ b/grants.html
@@ -32,6 +32,8 @@
 <h3>Grants</h3>
 <ul>
 
+<li><p>2022-2027: SSHRC Insight Grant: Understanding Fairness in Fair Machine Learning - $145,974; Role: PI (with W. Khern-am-nuai and Y. Adulyasak)</p>
+  
 <li><p>2021-2026: NSERC Discovery Grant: Retail Innovation Lab: Blending Data Science with Cutting-Edge Technology - $180,000; Role: PI</p>
 
 <li><p>2021-2022: NSERC Discovery Supplement for Early Career Researchers - $12,500; Role: PI</p>
