--- a/research.html
+++ b/research.html
@@ -241,7 +241,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 </ol>
 
 <ol start="19">
-<li><p><a href="https://maxccohen.github.io/Two_Sided_Competition.pdf">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, <b>Production and Operations Management</b>, 2022 (published online) <br />
+<li><p><a href="https://maxccohen.github.io/Two_Sided_Competition.pdf">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, <b>Production and Operations Management</b>, 31(5):1997-2014, 2022 <br />
 <a href="https://maxccohen.github.io/Two_Sided_Competition_Appendix.pdf">Online Appendix</a> <br />
 Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
 </div>
