--- a/research.html
+++ b/research.html
@@ -383,7 +383,7 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br />
 </div>
 </p>
 </li>
