--- a/teaching.html
+++ b/teaching.html
@@ -63,7 +63,7 @@ Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6
 
 <ul>
 <li><p><b><a href="">Revenue Management - McGill University - 2020-2022 </a></b><br />
-Elective course for Master of Management in Analytics. Evals: 5, 5 (out of 5)
+Elective course for Master of Management in Analytics. Evals: 5, 5, 4.8 (out of 5)
 </p>
 </li>
 </ul>
