--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ cloud computing, online advertising, peer-to-peer lending, real estate, healthca
 using tools such as machine learning, optimization, stochastic modeling, econometrics, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <h2>Editorial Work</h2>
+<p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2022-present)
 <p>Guest Department Editor for <a href="https://www.poms.org/cfp_POM_SI_ResDataScience.pdf"</a>POM Special Issue on "Responsible Data Science"</a> (2022-2024)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) 
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
