--- a/students.html
+++ b/students.html
@@ -89,6 +89,8 @@
 <li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
 
 <li><p>Ken Lee - Waterloo UG Computer Engineering (co-advisor with Derek Nowrouzezahrai)</p> 
+  
+<li><p>Samara Milstein - McGill UG Student in Biomedical Sciences</p>    
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
