--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ using tools such as machine learning, optimization, stochastic modeling, econome
 <p>Guest Department Editor for <a href="https://www.poms.org/cfp_POM_SI_ResDataScience.pdf"</a>POM Special Issue on "Responsible Data Science"</a> (2022-2024)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) 
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
-<p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-present)
+<p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-2022)
 <p>Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> (2019-present) 
 <p>I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a> (2018-2021) 
 
