--- a/research.html
+++ b/research.html
@@ -268,7 +268,7 @@ Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/
 </ol>
 
 <ol start="22">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Conditionally Accepted in <b>Marketing Science</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Forthcoming in <b>Marketing Science</b> <br />
 Accepted to the 2022 <i>ACM Conference on Economics & Computation </i> <br />
 Best Conference Paper Nominee, Conference on Information Systems and Technology (CIST) <br />
 Accepted at CIST 2021, 2021 North American Meeting of the Urban Economics Association, and 2022 Frank M. Bass FORMS Conference <br />
