--- a/research.html
+++ b/research.html
@@ -251,7 +251,8 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 
 
 <ol start="20">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, Forthcoming in <b>Operations Research</b> <br />
+<li><p><a href="https://maxccohen.github.io/DAC.pdf">"Data Aggregation and Demand Prediction,"</a> with R. Zhang and K. Jiao, <b>Operations Research</b>, 2022 (published online) <br />
+<a href="https://maxccohen.github.io/DAC-Appendix.pdf">Online Appendix</a> <br />
 [<a href="https://github.com/DACPublicator/DAC_Publication">Code</a>] <br />
 Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
