--- a/news.html
+++ b/news.html
@@ -32,6 +32,8 @@
 <h3>In the News</h3>
 <ul>
  
+<li><p><a href="https://snowshoe.io/maxime-cohen">Spark Plug Podcast</a>, <a href="https://open.spotify.com/episode/7jtDNEn40Vxq7EgcaJQ2HT">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/maxime-cohen/id1553532164?i=1000575775582">Apple Podcasts</a>, <a href="https://music.amazon.com/podcasts/e57f4088-a046-436c-ac52-86a869c27f6a/episodes/97923fca-bf0f-4156-8813-e9919658b36a/spark-plug-maxime-cohen">Amazon Podcasts</a>, August 2022</p> 
+ 
 <li><p><a href="https://poetsandquants.com/best-profs/2022-best-40-under-40-mba-professors-maxime-cohen-mcgill-university-desautels-faculty-of-management/?pq-category=best-profs">2022 Best 40-Under-40 MBA Professors: Maxime Cohen, McGill University</a>, Poets&Quants, May 2022</p>  
   
 <li><p><a href="https://delve.mcgill.ca/listen/how-predictive-data-analysis-illuminates-the-future-of-retail-with-maxime-cohen/">How Predictive Data Analysis Illuminates the Future of Retail</a>, Delve, May 2022</p> 
