--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https:
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
-Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.laps.com/"</a>Laps</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://www.ecoprice.shop/home"</a>EcoPrice</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a>, <a href="https://www.rebloc.io/"</a>Rebloc.io</a> <br />
+Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://www.ecoprice.shop/home"</a>EcoPrice</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a> <br />
 <br />
 <b>Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3-030-85855-1)<br />
 Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
@@ -94,6 +94,9 @@ Browns Books</a>
 My core expertise lies at the intersection of <b>data science</b> and <b>operations management</b>. I have worked on retail, ride-sharing, airline, sustainability,
 cloud computing, online advertising, peer-to-peer lending, real estate, healthcare analytics, and conflict analytics. I have collaborated with many companies including Google, Waze, Oracle Retail, IBM Research, Via, Spotify, Aldo Group, Couche-Tard/Circle K, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as machine learning, optimization, stochastic modeling, econometrics, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
+
+<br /> <br />
+My research and teaching have received more than 30 awards, including Poets&Quants Best 40-Under-40 MBA Professors, RETHINK Retail’s Top Retail Influencers, MSOM Young Scholar Award, and Best OM Paper in Management Science.
 
 <h2>Editorial Work</h2>
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Service Operations Department and Supply Chain Management Department (2022-present)
