--- a/workEx.html
+++ b/workEx.html
@@ -74,7 +74,7 @@ Member of GERAD - Group for Research in Decision Analysis
 </ul>
   
 <ul>
-<li><p><b><a href="#">Turbodega, Intelligems, Laps, Cherre, Silverback.ai, Rebloc.io (2017-present)</a></b><br />
+<li><p><b><a href="#">Turbodega, Intelligems, Leav, Cherre, Supplyve, Tote, EcoPrice, Silverback.ai (2017-present)</a></b><br />
 <b>Advisor or Member of Advisory Board</b>
 </p>
 </li>
