--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ cloud computing, online advertising, peer-to-peer lending, real estate, healthca
 using tools such as machine learning, optimization, stochastic modeling, econometrics, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <br /> <br />
-My research and teaching have received more than 30 awards, including Poets&Quants Best 40-Under-40 MBA Professors, RETHINK Retail’s Top Retail Influencers, MSOM Young Scholar Award, and Best OM Paper in Management Science.
+My research and teaching have received more than 30 awards, including Poets&Quants Best 40-Under-40 MBA Professors, RETHINK Retail’s Top Retail Influencers, MSOM Young Scholar Prize, and Best OM Paper in Management Science.
 
 <h2>Editorial Work</h2>
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Service Operations Department and Supply Chain Management Department (2022-present)
