--- a/teaching.html
+++ b/teaching.html
@@ -142,7 +142,13 @@ Featured as a content piece on the <a href="https://community.tableau.com/s/feed
 </ul>
  
 <ul>
-<li><p><b><a href="https://maxccohen.github.io/Danone-Digitad-Data-Driven-Digital-Marketing.pdf">Case Study: "Danone & Digitad: Building a Data-Driven Digital Marketing Strategy,"</a></b> with A. Sylvestre, A. Corbasson, and J. Abbou
+<li><p><b><a href="https://maxccohen.github.io/Danone-Digitad-Data-Driven-Digital-Marketing.pdf">Case Study: "Danone & Digitad: Building a Data-Driven Digital Marketing Strategy,"</a></b> with A. Sylvestre, A. Corbasson, and J. Abbou, 2020
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="">Case Study: "Intelligems: Pricing in the Online World,"</a></b> with U. Ahmad and S. Jagabathula, 2022
 </p>
 </li>
 </ul>
