--- a/research.html
+++ b/research.html
@@ -429,7 +429,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Submitted <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
 </div>
 </p>
