--- a/research.html
+++ b/research.html
@@ -301,7 +301,7 @@ Accepted to the 2022 Conference on Empirical Legal Studies <br />
 </ol>
 
 <ol start="26">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, Forthcoming in <b>Transportation Research Part A: Policy and Practice</b>, 2022 <br /> 
+<li><p><a href="https://maxccohen.github.io/Impact-HOV-Carpooling.pdf">"The Impact of High-Occupancy Vehicle Lanes on Carpooling,"</a> with A. Jacquillat, A. Ratzon, and R. Sasson, <b>Transportation Research Part A: Policy and Practice</b>, 165 (2022) 186–206, 2022 <br /> 
 </div>
 </p>
 </li>
