--- a/grants.html
+++ b/grants.html
@@ -34,8 +34,7 @@
 
 <li><p>2022-2027: SSHRC Insight Grant: Understanding Fairness in Fair Machine Learning - $145,974; Role: PI (with W. Khern-am-nuai and Y. Adulyasak)</p>
   
-<li><p>2022-2024: SSHRC Insight Development Grant: Building Accessible Vaccine Support Programs - $66,168 <br />
-Role: Co-applicant  (with S. Dahan, X. Zhu, D. Fairgrieve, S. Vanderslott)</p>
+<li><p>2022-2024: SSHRC Insight Development Grant: Building Accessible Vaccine Support Programs - $66,168; Role: Co-applicant (with S. Dahan, X. Zhu, D. Fairgrieve, S. Vanderslott)</p>
   
 <li><p>2021-2026: NSERC Discovery Grant: Retail Innovation Lab: Blending Data Science with Cutting-Edge Technology - $180,000; Role: PI</p>
 
@@ -49,20 +48,17 @@ Role: Co-applicant  (with S. Dahan, X. Zhu, D. Fairgrieve, S. Vanderslott)</p>
 
 <li><p>2020-2021: Mitacs Accelerate: Adapting Retail Practices to the Post-Pandemic (with Couche-Tard/Circle K) - $30,000; Role: Co-PI (with J. Clark)</p>
   
-<li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000 <br />
-Role: Co-PI  (with S. Ray, J. Clark, A. Moon)</p>
+<li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000; Role: Co-PI (with S. Ray, J. Clark, A. Moon)</p>
   
-<li><p>2020-2023: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: A System Coupling Perspective - $145,061 <br />
-Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
+<li><p>2020-2023: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: A System Coupling Perspective - $145,061; Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
   
 <li><p>2020-2021: Internal Social Sciences and Humanities Development Grant - $5,000</p>
   
 <li><p>2019-2022: Bensadoun Faculty Scholar Award - $60,000</p>
   
-<li><p>2019: Cherre’s Gift for Research Excellence: Applying Data Science to Real Estate - $10,400, Role: PI</p>
+<li><p>2019: Cherre’s Gift for Research Excellence: Applying Data Science to Real Estate - $10,400; Role: PI</p>
 
-<li><p>2019-2021: SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562 <br />
-Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
+<li><p>2019-2021: SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562; Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
 
 <li><p>2014-2015: UPS Ph.D. Fellowship</p>
 
