--- a/awards.html
+++ b/awards.html
@@ -36,7 +36,7 @@
   
 <li><p>2022: Poets&Quants Best 40-Under-40 MBA Professors</p>
   
-<li><p>2022: Finalist in the 2022 Jeff McGill Student Paper Award (student: Xiao Lei)</p>
+<li><p>2022: Finalist in the Jeff McGill Student Paper Award (student: Xiao Lei)</p>
     
 <li><p>2022: RETHINK Retail's Top Retail Influencers</p>
     
