--- a/research.html
+++ b/research.html
@@ -420,7 +420,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Major Revision in <b>Data Mining and Knowledge Discovery</b> <br />
 Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
 </div>
