--- a/workEx.html
+++ b/workEx.html
@@ -35,6 +35,7 @@
 <li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2019-present)</a></b><br />
 <b>Full Professor of Retail and Operations Management (with tenure)</b><br />
 <b>Scale AI Chair</b> in Data Science for Retail<br />
+Director of Research at the Bensadoun School of Retail Management<br />
 Co-Director of the Retail Innovation Lab (2019-2022)<br />
 Bensadoun Faculty Scholar (2019-2022)<br />
 Associate Member, Electrical and Computer Engineering Department (by courtesy)<br />
