--- a/students.html
+++ b/students.html
@@ -58,6 +58,8 @@
 
 <li><p>Banafsheh Asadi - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
+<li><p>Florian Golemo - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
+  
 <li><p>Thesis committee: Recep Bekci (McGill), Mehran Poursoltani (HEC Montréal), Claudio Sole (Polytechnique Montréal)</p>
 
 </ul>
