--- a/students.html
+++ b/students.html
@@ -88,9 +88,9 @@
 
 <li><p>Uzair Ahmad (2022) - McGill Master in Analytics</p>
   
+<li><p>Ken Lee - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
+  
 <li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
-
-<li><p>Ken Lee - Waterloo UG Computer Engineering (co-advisor with Derek Nowrouzezahrai)</p> 
   
 <li><p>Samara Milstein - McGill UG Student in Biomedical Sciences</p>    
 
