--- a/research.html
+++ b/research.html
@@ -414,12 +414,6 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
-<li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Submitted <br />
-</div>
-</li>
-</ul>
-
-<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Major Revision in <b>Data Mining and Knowledge Discovery</b> <br />
 Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
@@ -433,6 +427,12 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
 </div>
 </p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Submitted <br />
+</div>
 </li>
 </ul>
 
