--- a/research.html
+++ b/research.html
@@ -318,7 +318,7 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ol>
 
 <ol start="28">
-<li><p><a href="">"Managing the Dynamic Evolution of Airfares: Insights from a Field Experiment,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, Forthcoming in <b>Management Science</b>, 2022 <br />
+<li><p><a href="">"Managing Airfares Under Competition: Insights From a Field Experiment,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, Forthcoming in <b>Management Science</b>, 2022 <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
