--- a/grants.html
+++ b/grants.html
@@ -32,6 +32,8 @@
 <h3>Grants</h3>
 <ul>
 
+<li><p>2022-2027: NSF-China: Resilient operations of urban lifeline systems under information insufficiency - 2 million RMB; Role: Co-applicant (with W. Qi, S. Liu, Y. Liang, L. Yu, X. Duan, J. Zhang, Y. Li, Z. Jiang, and X. Zhang)</p>
+  
 <li><p>2022-2027: SSHRC Insight Grant: Understanding Fairness in Fair Machine Learning - $145,974; Role: PI (with W. Khern-am-nuai and Y. Adulyasak)</p>
   
 <li><p>2022-2024: SSHRC Insight Development Grant: Building Accessible Vaccine Support Programs - $66,168; Role: Co-applicant (with S. Dahan, X. Zhu, D. Fairgrieve, S. Vanderslott)</p>
