--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2022: RETHINK Retail's Top Retail Influencers</p>
+    
 <li><p>2022: MSOM Young Scholar Prize</p>
   
 <li><p>2022: Poets&Quants Best 40-Under-40 MBA Professors</p>
