--- a/research.html
+++ b/research.html
@@ -279,7 +279,8 @@ Accepted at CIST 2021, 2021 North American Meeting of the Urban Economics Associ
 </ol>
 
 <ol start="23">
-<li><p><a href="https://maxccohen.github.io/Price-Discrimination-Bertrand.pdf">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, <b>Manufacturing & Service Operations Management</b>, 25(1):148-167, 2023 <br />
+<li><p><a href="https://maxccohen.github.io/Discrimination-Bertrand.pdf">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, <b>Manufacturing & Service Operations Management</b>, 25(1):148-167, 2023 <br />
+<a href="https://maxccohen.github.io/Discrimination-Bertrand-Appendix.pdf">Online Appendix</a> <br />
 </div>
 </p>
 </li>
