--- a/research.html
+++ b/research.html
@@ -309,7 +309,7 @@ Accepted to the 2022 Conference on Empirical Legal Studies <br />
 </ol>
 
 <ol start="27">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3274628">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, Forthcoming in <b>Manufacturing & Service Operations Management</b>, 2022 <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3274628">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, Forthcoming in <b>Manufacturing & Service Operations Management</b>, 2023 <br />
 Selected as Best Paper at the 2019 Academy of Management Meeting and accepted to the <i>2019 MSOM Service SIG</i><br />
 Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a> <br />
 Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalist in the 2020 POMS College of Behavioral Operations Junior Scholar Paper Competition <br />
@@ -319,7 +319,7 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ol>
 
 <ol start="28">
-<li><p><a href="">"Managing Airfares Under Competition: Insights From a Field Experiment,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, Forthcoming in <b>Management Science</b>, 2022 <br />
+<li><p><a href="https://maxccohen.github.io/Managing-Airfares-Under-Competition.pdf">"Managing Airfares Under Competition: Insights From a Field Experiment,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, <b>Management Science</b>, 2023 (published online)  <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
