--- a/awards.html
+++ b/awards.html
@@ -33,6 +33,8 @@
 <ul>
 
 <li><p>2023: RETHINK Retail's Top Retail Influencers</p>
+  
+<li><p>2023: Finalist in the POMS CBOM Junior Scholar Paper Competition</p>
     
 <li><p>2022: MSOM Young Scholar Prize</p>
   
