--- a/research.html
+++ b/research.html
@@ -447,15 +447,15 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Working paper <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <font color="red"<b>(Revised Version)</b></font> <br />
+Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensure-everyone-pays-fair-prices-online/">Delve</a> <br />
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Working paper <br /> <!-- <font color="red"<b>(NEW)</b></font> <br /> -->
-Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensure-everyone-pays-fair-prices-online/">Delve</a> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Working paper <br />
 </div>
 </p>
 </li>
