--- a/awards.html
+++ b/awards.html
@@ -34,7 +34,7 @@
 
 <li><p>2023: RETHINK Retail's Top Retail Influencers</p>
   
-<li><p>2023: Finalist in the POMS CBOM Junior Scholar Paper Competition</p>
+<li><p>2023: Finalist in the POMS CBOM Junior Scholar Paper Competition (student: Nymisha Bandi)</p>
     
 <li><p>2022: MSOM Young Scholar Prize</p>
   
