--- a/research.html
+++ b/research.html
@@ -288,7 +288,7 @@ Accepted at CIST 2021, 2021 North American Meeting of the Urban Economics Associ
 </ol>
 
 <ol start="24">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, Forthcoming in <b>Artificial Intelligence and Law</b>, 2023  <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4013823">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, <b>Artificial Intelligence and Law</b>, 2023 (published online)  <br /> 
 Accepted to the 2022 Conference on Empirical Legal Studies <br />
 </div>
 </p>
